--- a/test.html
+++ b/test.html
@@ -416,6 +416,7 @@
 						trigger: ".story_keyvisual",
 						start: "top top",
 						end: "100%",
+						scrub: true,
 						pin: true,
 						markers: false,
 						toggleClass: {targets:  ".story_keyvisual", className: "pin"},
@@ -424,6 +425,7 @@
 						trigger: ".story_brand",
 						start: "top top",
 						end: "100%",
+						scrub: true,
 						pin: true,
 						markers: false,
 						toggleClass: {targets:  ".story_brand", className: "pin"},
@@ -432,6 +434,7 @@
 						trigger: ".key_line",
 						start: "top top",
 						end: "100%",
+						scrub: true,
 						pin: true,
 						markers: false,
 						toggleClass: {targets:  ".key_line", className: "pin"},
