--- a/test.html
+++ b/test.html
@@ -87,7 +87,6 @@
 				.our_story .story_keyvisual .btn_scroll {color:#767676; padding-bottom:4.2rem; position:absolute; bottom:2rem; left:50%; transform: translateX(-50%); z-index:100}
 				.our_story .story_keyvisual .btn_scroll::after {content:""; display:block; color:#fff; width:3.6rem; height:1.3rem; background:url('https://d3dims7uu70rdw.cloudfront.net/image/384224417642/image_3afi6t3t0t7td1ai34l2qin56n/-FPNG') no-repeat; position:absolute; left:calc(50% - 1.8rem)}
 				.our_story .story_brand{overflow:hidden;position: relative;height:100vh;background:#888 url("/int/en/resource/images/discover/our_story_brandfilm_pc_int_231027.jpg") no-repeat;background-size: cover}
-				.pin{padding-top:62px!important;}
 		</style>
 
 		<div id="wrap">
@@ -418,25 +417,25 @@
 						end: "100%",
 						scrub: true,
 						pin: true,
-						markers: false,
+						markers: true,
 						toggleClass: {targets:  ".story_keyvisual", className: "pin"},
 					});
 					ScrollTrigger.create({
 						trigger: ".story_brand",
-						start: "top top",
+						start: "top 62px",
 						end: "100%",
 						scrub: true,
 						pin: true,
-						markers: false,
+						markers: true,
 						toggleClass: {targets:  ".story_brand", className: "pin"},
 					});
 					ScrollTrigger.create({
 						trigger: ".key_line",
-						start: "top top",
+						start: "top 62px",
 						end: "100%",
 						scrub: true,
 						pin: true,
-						markers: false,
+						markers: true,
 						toggleClass: {targets:  ".key_line", className: "pin"},
 					});
 				}
